--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,13 @@ langchain_openai
 langchain_community
 python-dotenv
 streamlit
+langserve
+fastapi
+uvicorn
+sse_starlette
+bs4
+pypdf
+chromadb
+sentence-transformers
+faiss-cpu
+langchain_huggingface
